--- a/Reflex.vcxproj.filters
+++ b/Reflex.vcxproj.filters
@@ -15,12 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\ReflectionManager.cpp">
+    <ClCompile Include="src\Reflex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\demo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\ReflectionManager.h">
+    <ClInclude Include="src\Reflex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\demo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
